# base-model

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
models/trpg-final/: model.onnx  tokenizer.json  tokenizer_config.json
models/trpg-final/checkpoint-200/: config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
models/trpg-final/checkpoint-380/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
src/base_model_trpgner/: __init__.py
src/base_model_trpgner/inference/: __init__.py
src/base_model_trpgner/training/: __init__.py
src/base_model_trpgner/utils/: __init__.py
src/basemodel/: __init__.py  download_model.py
src/basemodel/training/: __init__.py
src/utils/: conll_to_dataset.py  word_conll_to_char_conll.py
tests/: onnx_infer.py  test_onnx_only_infer.py
utils/: conll_to_dataset.py  llm_seri.py  process_log.py  word_conll_to_char_conll.py
